[tool.poetry]
name = "tekashi-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
chatbot-py = "^2.74"
wikipedia = "^1.4.0"
chatterbot-voice = "^0.1.5"
wit = "^6.0.0"
emoji = "^1.1.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
